--- a/package.json
+++ b/package.json
@@ -17,5 +17,13 @@
   ],
   "author": "Frank Desmettre <frank.desmettre@gmail.com>",
   "license": "ISC",
-  "homepage": "https://bitbucket.org/frankdsm/silence#readme"
+  "homepage": "https://bitbucket.org/frankdsm/silence#readme",
+  "dependencies": {
+    "compute-incrmmean": "^1.0.2",
+    "compute-qmean": "^1.0.0",
+    "express": "^4.14.0",
+    "pcm-boilerplate": "^0.1.1",
+    "play-sound": "0.0.9",
+    "vu-meter": "^0.1.0"
+  }
 }
